Added fix related to sonarqube request